5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1756_1185.log
== TEST (2019-05-29 12:51:16) 
-- CODE:
from numpy import*
a=array(eval(input("glicose: ")))
i=0
x=0
while(i<size(a)):
	if(v[i]>99):
		x=x+1
		print(i)
	else:
		x=x+0
	i=i+1
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:51:37) 
-- CODE:
from numpy import*
a=array(eval(input("glicose: ")))
i=0
x=0
while(i<size(a)):
	if(a[i]>99):
		x=x+1
		print(i)
	else:
		x=x+0
	i=i+1
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:51:42) 
-- CODE:
from numpy import*
a=array(eval(input("glicose: ")))
i=0
x=0
while(i<size(a)):
	if(a[i]>99):
		x=x+1
		print(i)
	else:
		x=x+0
	i=i+1
	print(x)
-- EXECUTION TIME:
0.34119
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
1
1
2
2
2
4
3
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
0
1
1
2
2
3
3
4
4
5
5
6
6
6
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
0
0
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:52:15) 
-- CODE:
from numpy import*
a=array(eval(input("glicose: ")))
i=0
x=0
while(i<size(a)):
	if(a[i]>99):
		x=x+1
	print(i)
	else:
		x=x+0
	i=i+1
	print(x)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:52:37) 
-- CODE:
from numpy import*
a=array(eval(input("glicose: ")))
i=0
x=0
while(i<size(a)):
	if(a[i]>99):
		x=x+1
		print(i)
	else:
		x=x+0
	i=i+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:52:43) 
-- CODE:
from numpy import*
a=array(eval(input("glicose: ")))
i=0
x=0
while(i<size(a)):
	if(a[i]>99):
		x=x+1
		print(i)
	else:
		x=x+0
	i=i+1
print(x)
-- EXECUTION TIME:
0.429492
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
